--- a/src/main/resources/assets/lastsmith/lang/en_US.lang
+++ b/src/main/resources/assets/lastsmith/lang/en_US.lang
@@ -14,7 +14,7 @@ item.flammpfeil.slashblade.named.louguan_tx.name=Hell Realm Sword-Roukanken-
 item.flammpfeil.slashblade.named.bailou_tx.name=Hell Realm Sword-Hakurouken-
 item.flammpfeil.slashblade.named.roukan_xf.name=RoukanSenpuuzin
 item.flammpfeil.slashblade.named.bailou_xf.name=HakurouSenpuuzin
-item.flammpfeil.slashblade.named.sakuyablade.name=Sakuya Blade
+item.flammpfeil.slashblade.named.sakuyablade.name=Sakura Blade
 item.flammpfeil.slashblade.unnamedBlade.name=Noted-Origin-
 item.flammpfeil.slashblade.model_Blade.name=Model-No Soul-
 item.flammpfeil.slashblade.model_Blade_1.name=Model-Powerful-
@@ -27,7 +27,7 @@ item.flammpfeil.slashblade.named.smith_last.name=-Destiny-
 item.flammpfeil.slashblade.named.ginkgoblade.name=Ginkgo Blade
 item.flammpfeil.slashblade.named.nanosaber.name=Nano Blade
 item.flammpfeil.slashblade.named.quantumsaber.name=Quantum Blade
-item.flammpfeil.slashblade.named.yingjian.name=Spring of Sakuya
+item.flammpfeil.slashblade.named.yingjian.name=Spring of Sakura
 item.flammpfeil.slashblade.named.wenshi.name=Wen Shi
 item.flammpfeil.slashblade.named.snowblade.name=Snow Blade
 item.flammpfeil.slashblade.named.doubleblade.name=Double Blade
@@ -92,6 +92,9 @@ item.lastsmith.steel_ingot.name=Steel Ingot
 item.lastsmith.crashed_iron.name=Crushed Iron Ore
 item.lastsmith.wooden_blade.name=Wooden Blade
 item.lastsmith.paper_arthurs.name=Arthurs Paper
+item.lastsmith.sakura_full.name=Blossomed Sakura
+item.lastsmith.sakura_ingot_unfinished.name=Unfinished Sakura Ingot
+item.lastsmith.sakura_ingot.name=Sakura Ingot
 
 item.flammpfeil.slashblade.wooden_saya.name=Wooden Sheath
 item.flammpfeil.slashblade.named.template_re_fake.name=Fake -Blue Plum-
@@ -108,6 +111,16 @@ research.BLADES.title=Different Blades
 research.WHITESHEATH.title=Sharpness-White-
 research.SLASHBLADE.title=SlashBlade--
 research.UNNAMEDBLADE.title=Noted-Origin-
+
+research.NAMEDBALDE.title=Noted
+research.SAKURABALDE.title=Sakura blade
+research.ROUKAN.title=Roukanken
+research.HAKUROU.title=Hakurouken
+research.OLDBLADES.title=Old Blades
+research.OTHERSBLADE.title=Other Blades
+
+research.ROUKANSENPUUZIN.title=RoukanSenpuuzin
+research.HAKUROUSENPUUZIN.title=HakurouSenpuuzin
 
 research.FIRSTBLADE.text.stage.1=This manual originally had only a few thaumic things, until I found a large blank behind the manual.<BR>In short, the first step to becoming a swordsmith is to make a wooden blade, so the blade of solid wood is the first thing.
 research.FIRSTBLADE.text.stage.2=Good,Now this is the first blade.<BR>I recorded the accessories needed for a wooden blade and how they were crafted. The combination is a wooden blade.
@@ -131,3 +144,28 @@ research.SLASHBLADE.text.stage.3=My experiment proved that the rumors are true.<
 research.UNNAMEDBLADE.text.stage.1=I tried to make a new blade, and I started with a white sheath.
 research.UNNAMEDBLADE.text.stage.2=This white sheath, the quality of the blade is not good. <BR> It's broken easily, so I need to replace it with a new one. <BR> Wait, I may be able to change some small things......
 research.UNNAMEDBLADE.text.stage.3=Done, the best quality of blade and best sheath that I have.<BR>Noted-Origin-, the beginning of these stories......
+
+research.NAMEDBALDE.text.stage.1=(WIP)
+research.NAMEDBALDE.text.stage.2=(WIP)
+
+research.SAKURABALDE.text.stage.1=(WIP)
+research.SAKURABALDE.text.stage.2=(WIP)
+
+research.ROUKAN.text.stage.1=(WIP)
+research.ROUKAN.text.stage.2=(WIP)
+
+
+research.HAKUROU.text.stage.1=(WIP)
+research.HAKUROU.text.stage.2=(WIP)
+
+research.SLASHBLADE.text.stage.1=(WIP)
+research.SLASHBLADE.text.stage.2=(WIP)
+
+research.OTHERSBLADE.text.stage.1=(WIP)
+research.OTHERSBLADE.text.stage.2=(WIP)
+
+research.ROUKANSENPUUZIN.text.stage.1=(WIP)
+research.ROUKANSENPUUZIN.text.stage.2=(WIP)
+
+research.HAKUROUSENPUUZIN.text.stage.1=(WIP)
+research.HAKUROUSENPUUZIN.text.stage.2=(WIP)
