--- a/src/main/resources/assets/lastsmith/lang/zh_CN.lang
+++ b/src/main/resources/assets/lastsmith/lang/zh_CN.lang
@@ -51,6 +51,11 @@ item.flammpfeil.slashblade.named.kogawa_rare.name=名刀「斗刀」
 item.flammpfeil.slashblade.named.kogawa_super.name=妖刀「孤独」
 item.flammpfeil.slashblade.named.acid.name=酒石酸菌的刀
 
+item.flammpfeil.slashblade.named.Scorn.seald.name=名刀「亡者」
+item.flammpfeil.slashblade.named.Scorn.fake.name=伪物「亡者」
+item.flammpfeil.slashblade.named.Scorn.rust.name=伪物「亡者」
+item.flammpfeil.slashblade.named.Scorn.name=「镇魂曲」
+
 flammpfeil.swaepon.info.fake=伪
 item.flammpfeil.slashblade.named.void_blade.name=无铭「虚无」
 
@@ -106,6 +111,7 @@ item.wrap.BambooMod.katana_tls.name=利刀「无名」红玉
 
 itemGroup.lastsmith=最后的太刀匠人
 
+tc.research_category.KATANA=刀艺学
 research.FIRSTBLADE.title=第一振刀
 research.WOODENBLADE.title=无铭刀「木偶」
 research.BLADES.title=不同的刀刃
@@ -156,7 +162,7 @@ research.ROUKAN.text.stage.1=楼观剑，据传是可以斩断一切的极其锋
 research.ROUKAN.text.stage.2=仿制品里，较为成功的会被称为观楼剑。<BR>而楼观剑真品，则在西行寺家的庭师手中。<BR>制作这样的一把妖刀，是极其耗费财力的。<BR>我们虽然有能力打造出一把几乎完全一致的刀，也没有办法得到她手里的那一振了。
 
 research.HAKUROU.text.stage.1=白楼剑，魂魄家的家传宝刀。<BR>作为西行寺家的护卫，这振刀的实际用途并不是用于斩杀生灵。<BR>即便如此，我们也不知道这振刀的其余信息。
-research.HAKUROU.text.stage.2=确定了，这振刀确实没有很锋利的刀刃。<BR>取而代之的是，这振刀能够解开对方的迷茫，幽灵则直接成佛。<BR>西行寺家的大小姐为什么至今未成佛，可能她的心里根本没有迷茫而已吧。。。。。。
+research.HAKUROU.text.stage.2=这振刀确实没有很锋利的刀刃。<BR>取而代之的是，这振刀能够解开对方的迷茫，幽灵则直接成佛。<BR>西行寺家的大小姐为什么至今未成佛，可能她的心里根本没有迷茫而已吧。。。。。。
 
 research.OTHERSBLADE.text.stage.1=有一些零散的刀，它们没有一个成型的发展路线，潜力也不是很大。<BR>现有的资料无法完全证明它们的存在。
 research.OTHERSBLADE.text.stage.2=这些零散的刀没有什么特别的地方，但是它们却更容易获得。<BR>对于没有能力打造强力兵器的普通人，这会是他们的首选。
