--- a/src/main/resources/assets/lastsmith/lang/en_US.lang
+++ b/src/main/resources/assets/lastsmith/lang/en_US.lang
@@ -1,9 +1,8 @@
 ﻿///////////
 
 item.flammpfeil.slashblade.named.sweapon.name=Sweapon
-item.flammpfeil.slashblade.named.slashblade_old.name=SlashBlade-- -old-
-item.flammpfeil.slashblade.named.louguan_old.name=Heirloom-Guanlou-
-item.flammpfeil.slashblade.named.louguan_old2.name=Heirloom-Roukanken-
+item.flammpfeil.slashblade.named.slashblade_old.name=SlashBlade-Old School-
+item.flammpfeil.slashblade.named.louguan_old.name=Kanrouken
 item.flammpfeil.slashblade.named.template_re.name=Sharpness-Blue Plum-
 item.flammpfeil.slashblade.named.template_re2.name=Sharpness-Red Plum-
 item.flammpfeil.slashblade.named.eievui.name=The balde of Eievui
@@ -31,7 +30,7 @@ item.flammpfeil.slashblade.named.quantumsaber.name=Quantum Blade
 item.flammpfeil.slashblade.named.yingjian.name=Spring of Sakura
 item.flammpfeil.slashblade.named.wenshi.name=Wen Shi
 item.flammpfeil.slashblade.named.snowblade.name=Snow Blade
-item.flammpfeil.slashblade.named.doubleblade.name=Double Blade
+item.flammpfeil.slashblade.named.doubleblade.name=Kataware Blade
 item.flammpfeil.slashblade.named.shurablade.name=Shura Blade
 item.flammpfeil.slashblade.named.sagequoia.name=Sagequoia
 item.flammpfeil.slashblade.named.murakumo.name=Murakumo
@@ -40,16 +39,16 @@ item.flammpfeil.slashblade.named.Ikaruga.name=Ikaruga
 item.flammpfeil.slashblade.named.zheng.name=0999312's Balde
 item.flammpfeil.slashblade.named.zombie.name=AbbyQAQ's Balde
 item.flammpfeil.slashblade.named.luli.name=luli's Balde
-item.flammpfeil.slashblade.named.pear.name=Bubinga Blade
+item.flammpfeil.slashblade.named.pear.name=Limuness's Blade
 item.flammpfeil.slashblade.named.liu.name=R_Liu's Balde
 item.flammpfeil.slashblade.named.yile.name=Yile's Blade
 item.flammpfeil.slashblade.named.117.name=1179384677's Blade
-item.flammpfeil.slashblade.named.nethop.name=The blade of praetor
+item.flammpfeil.slashblade.named.nethop.name=Praetor‘s Blade
 item.flammpfeil.slashblade.named.irsoft.name=irsoft's Balde
 item.flammpfeil.slashblade.named.kogawa_normal.name=Normal-Blade-
 item.flammpfeil.slashblade.named.kogawa_rare.name=Rare-Blade-
 item.flammpfeil.slashblade.named.kogawa_super.name=Super-Blade-
-item.flammpfeil.slashblade.named.acid.name=Tartaric Acid's Balde
+item.flammpfeil.slashblade.named.acid.name=Tartaric Acid's Blade
 
 item.flammpfeil.slashblade.named.Scorn.seald.name=Heirloom-Dead-
 item.flammpfeil.slashblade.named.Scorn.fake.name=Fake-Dead-
@@ -119,14 +118,15 @@ item.lastsmith.crashed_iron.name=Crushed Iron Ore
 item.lastsmith.wooden_blade.name=Wooden Blade
 item.lastsmith.paper_arthurs.name=Arthurs Paper
 item.lastsmith.sakura_full.name=Blossomed Sakura
-
-item.lastsmith.paper_arthurs.name=Arthurs Paper
-item.lastsmith.sakura_full.name=Blossomed Sakura
+item.lastsmith.bamboo_blade.name=Bamboo Blade
+item.lastsmith.sakura_ingot_unfinished.name=Unfinished Sakura Ingot
+item.lastsmith.sakura_ingot.name=Sakura Ingot
 
 item.lastsmith.yakibatsuchi.name=Yakibatsuchi
 item.lastsmith.coal_dust.name=Coal Dust
 
 item.flammpfeil.slashblade.wooden_saya.name=Wooden Sheath
+item.flammpfeil.slashblade.bamboo_saya.name=Bamboo Sheath
 item.flammpfeil.slashblade.named.template_re_fake.name=Fake -Blue Plum-
 item.flammpfeil.slashblade.named.template_re2_fake.name=Fake -Red Plum-
 
