--- a/src/main/resources/assets/lastsmith/lang/en_US.lang
+++ b/src/main/resources/assets/lastsmith/lang/en_US.lang
@@ -15,8 +15,7 @@ item.flammpfeil.slashblade.named.roukan_xf.name=RoukanSenpuuzin
 item.flammpfeil.slashblade.named.bailou_xf.name=HakurouSenpuuzin
 item.flammpfeil.slashblade.named.sakuyablade.name=Sakura Blade
 item.flammpfeil.slashblade.unnamedBlade.name=Noted-Origin-
-item.flammpfeil.slashblade.model_Blade.name=Model-No Soul-
-item.flammpfeil.slashblade.model_Blade_1.name=Model-Powerful-
+
 item.flammpfeil.slashblade.named.namedblade_basic.name=Anonymity-White-
 
 item.flammpfeil.slashblade.named.smith_1.name=Own-Waitting-
@@ -48,6 +47,7 @@ item.flammpfeil.slashblade.named.kogawa_normal.name=Normal-Blade-
 item.flammpfeil.slashblade.named.kogawa_rare.name=Rare-Blade-
 item.flammpfeil.slashblade.named.kogawa_super.name=Super-Blade-
 item.flammpfeil.slashblade.named.acid.name=Tartaric Acid's Blade
+item.flammpfeil.slashblade.named.xiaomo.name=Junior_Mo_Sac's Blade
 
 item.flammpfeil.slashblade.named.Scorn.seald.name=Heirloom-Dead-
 item.flammpfeil.slashblade.named.Scorn.fake.name=Fake-Dead-
