--- a/src/main/resources/assets/lastsmith/lang/zh_CN.lang
+++ b/src/main/resources/assets/lastsmith/lang/zh_CN.lang
@@ -49,6 +49,7 @@ item.flammpfeil.slashblade.named.kogawa_normal.name=平庸「斗刀」
 item.flammpfeil.slashblade.named.kogawa_rare.name=名刀「斗刀」
 item.flammpfeil.slashblade.named.kogawa_super.name=妖刀「孤独」
 item.flammpfeil.slashblade.named.acid.name=酒石酸菌的刀
+item.flammpfeil.slashblade.named.xiaomo.name=司徒小莫的刀
 
 item.flammpfeil.slashblade.named.Scorn.seald.name=名刀「亡者」
 item.flammpfeil.slashblade.named.Scorn.fake.name=伪物「亡者」
