--- a/src/main/resources/assets/lastsmith/lang/zh_CN.lang
+++ b/src/main/resources/assets/lastsmith/lang/zh_CN.lang
@@ -253,3 +253,7 @@ research.ROUKANSENPUUZIN.text.stage.2=这一振刀，是以楼观剑为基底的
 
 research.HAKUROUSENPUUZIN.text.stage.1=研究元素工具的时候，你想到了一些奇怪的点子。<BR>如果一振日本刀被赐予了元素的力量，那又会是什么样的呢？
 research.HAKUROUSENPUUZIN.text.stage.2=这一振刀，是以白楼剑为基底的元素道具。<BR>很显然，这振刀有着和风雷剑一样的能力，但是也比风雷剑强大的多。
+
+guide.smith_guide.title=无名刀匠之书
+guide.smith_guide.landing_text=这个无名刀匠将自己的知识，全部记录在了这本书里。
+guide.smith_guide.subtitle=里面，是无名刀匠的一生
